attempt(4): fix image & header margin on mobile

--- a/public/css/style.sass
+++ b/public/css/style.sass
@@ -52,7 +52,7 @@ a[href]
 .mobile-header-height
   letter-spacing: -2.25px
   margin-bottom: 10px
-  margin-top: -5px
+  margin-top: -1px
   font-kerning: none
   font-size: 35px
 
